OESE-277 align Visit button to center and fix Visit button display on large screens at 125% magnification

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -146,6 +146,7 @@
 	text-overflow: initial;
     word-break: break-all;
 }
+.page-template-nalrc-template .wpdt-c .wpDataTablesWrapper table.wpDataTable tr td.column-link { text-align:center; }
 .page-template-nalrc-template .wpdt-c .wpDataTablesWrapper div.dt-buttons { display:none; }
 .page-template-nalrc-template .wpdt-c.wdt-skin-light .wpDataTablesWrapper table.wpDataTable thead th.sorting:after, 
 .page-template-nalrc-template .wpdt-c.wdt-skin-light .wpDataTablesWrapper table.wpDataTable thead th.sorting_asc:after, 
